[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/Encontrar_Error/Scripts/Encontrar_Error.gd" type="Script" id=1]
[ext_resource path="res://Common/Fonts/ARCADECLASSIC.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/Encontrar_Error/Scenes/Respuesta.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Encontrar_Error/Scenes/Error_Encontrado.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Encontrar_Error/Scenes/Planteamiento_Problema.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 60
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.192157, 0.0588235, 0.0588235, 1 )
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="Animation" id=3]
resource_name = "Empezar"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Planteamiento_Problema:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.85098, 0.85098, 0.85098, 1 ), Color( 0.513726, 0.513726, 0.513726, 1 ), Color( 0.247059, 0.247059, 0.247059, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Planteamiento_Problema:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("UI:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1, 1.3, 1.5, 1.7, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0.266667, 0.266667, 0.266667, 1 ), Color( 0.576471, 0.576471, 0.576471, 1 ), Color( 0.807843, 0.807843, 0.807843, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Iniciar"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("UI:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Error_Encontrado:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Planteamiento_Problema:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Encontrar_Error" type="Node"]
script = ExtResource( 1 )

[node name="UI" type="Control" parent="."]
margin_right = 720.0
margin_bottom = 1440.0

[node name="ColorRect" type="ColorRect" parent="UI"]
margin_right = 720.0
margin_bottom = 1440.0
mouse_filter = 2
color = Color( 0.517647, 0.0941176, 0.0941176, 1 )

[node name="Button" type="Button" parent="UI"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -250.0
margin_top = -180.0
margin_right = 254.0
margin_bottom = -98.0
size_flags_horizontal = 6
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
text = "Confirmar "
flat = true

[node name="Panel" type="Panel" parent="UI"]
margin_left = 30.0
margin_top = 50.0
margin_right = 690.0
margin_bottom = 1180.0
mouse_filter = 2
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Panel"]
margin_left = 20.0
margin_top = 30.0
margin_right = 640.0
margin_bottom = 1090.0

[node name="Respuesta" parent="UI" instance=ExtResource( 3 )]
margin_left = 370.0
margin_top = 640.0
margin_right = 370.0
margin_bottom = 640.0

[node name="Error_Encontrado" parent="." instance=ExtResource( 4 )]

[node name="Planteamiento_Problema" parent="." instance=ExtResource( 5 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Empezar = SubResource( 3 )
anims/Iniciar = SubResource( 4 )
[connection signal="pressed" from="UI/Button" to="." method="_on_Button_pressed"]
[connection signal="empezar" from="Planteamiento_Problema" to="." method="_on_Planteamiento_Problema_empezar"]
